--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Kartikey Saini # your name (or website title) here
+title: Kartikey<br> Saini # your name (or website title) here
 logo: "/images/20220721_004729.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
