--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ background-color: #f8f9fa; /* Light background color */
 color: #343a40; /* Dark text color */
 title: Kartikey <br> Saini # your name (or website title) here
 logo: "/images/20220721_004729.jpg?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
+description: > 
+Aspiring data analyst with a background in business analysis, 
+here to add a relaxed touch to the world of data. Passionate about uncovering insights, 
+I'm on a journey to explore the cool possibilities of data science and its real-world applications.
+<a href="https://www.linkedin.com/in/kartikey-saini-268827144/">View My LinkedIn Profile</a> <HR>
+
+ <a href="https://github.com/kartikeysaini98">View My Github Profile</a> 
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
