--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 title: Kartikey <br> Saini # your name (or website title) here
 logo: "/images/20220721_004729.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  An aspiring data scientist passionate about leveraging data to uncover insights and drive informed decisions. With a background in Data Science and Analytics, I'm on a journey to explore the endless possibilities of data science and its applications.
+  
+Aspiring data analyst with a background in business analysis, here to add a relaxed touch to the world of data. Passionate about uncovering insights, I'm on a journey to explore the cool possibilities of data science and its real-world applications.
   <br><br>
   
-  <a href="https://www.linkedin.com/in/vishwanath-poojary-64493b1b0">View My LinkedIn Profile</a> 
+  <a href="www.linkedin.com/in/kartikey-saini-268827144">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
