--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Kartikey <br> Saini # your name (or website title) here
-logo: "/images/20220721_004729.jpg?raw=true" # your photo (or logo) here
+title: Kartikey Saini # your name (or website title) here
+logo: "/images/20220721_004729?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  
-Aspiring data analyst with a background in business analysis, here to add a relaxed touch to the world of data. Passionate about uncovering insights, I'm on a journey to explore the cool possibilities of data science and its real-world applications.
+  An aspiring data analyst passionate about leveraging data to uncover insights and drive informed decisions. With a background in Data Science and Analytics, I'm on a journey to explore the endless possibilities of data science and its applications.
   <br><br>
   
   <a href="www.linkedin.com/in/kartikey-saini-268827144">View My LinkedIn Profile</a> 
