--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kartikey <br>Saini # your name (or website title) here
-logo: "/images/20220721_004729?raw=true" # your photo (or logo) here
+logo: "/images/20220721_004729.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   An aspiring data analyst passionate about leveraging data to uncover insights and drive informed decisions. With a background in Data Science and Analytics, I'm on a journey to explore the endless possibilities of data science and its applications.
   <br><br>
