--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Kartikey <br>Saini # your name (or website title) here
-logo: "/images/20220721_004729.jpg?raw=true" # your photo (or logo) here
+title: KARTIKEY <br>SAINI # your name (or website title) here
+logo: "/images/Capture.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  An aspiring data analyst passionate about leveraging data to uncover insights and drive informed decisions. With a background in Data Science and Analytics, I'm on a journey to explore the endless possibilities of data science and its applications.
-  <br><br>
+Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, and BI tools to drive business insights and process efficiency. Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance. Continuously exploring innovative data science applications to enhance business impact  <br><br>
   
   <a href="https://www.linkedin.com/in/kartikey-saini-268827144">View My LinkedIn Profile</a> 
   
