--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: KARTIKEY <br>SAINI # your name (or website title) here
+title: KARTIKEY SAINI # your name (or website title) here
 logo: "/images/Capture.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, and BI tools to drive business insights and process efficiency. Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance. Continuously exploring innovative data science applications to enhance business impact  <br><br>
