--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,15 @@
-title: KARTIKEY SAINI # your name (or website title) here
-logo: "/images/Capture.PNG?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
-Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, and BI tools to drive business insights and process efficiency. Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance. Continuously exploring innovative data science applications to enhance business impact  <br><br>
+title: KARTIKEY SAINI # Your name or website title here
+logo: "/images/Capture.PNG?raw=true" # Your photo or logo here
+
+description: >
+  Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, and BI tools to drive business insights and process efficiency. 
+  Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance. 
+  Continuously exploring innovative data science applications to enhance business impact.  
   
-  <a href="https://www.linkedin.com/in/kartikey-saini-268827144">View My LinkedIn Profile</a> 
-  
+  [View My LinkedIn Profile](https://www.linkedin.com/in/kartikey-saini-268827144)  
+
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-theme
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+  - jekyll-remote-theme
+
+google_analytics: UA-000000-0 # Your Google Analytics tracking ID here
