--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Kartikey Saini | Analyst & Research Specialist # Website Title
+title: "Kartikey Saini | Analyst & Research Specialist" # Website Title
 logo: "/images/Capture.PNG?raw=true" # Path to Your Logo/Image
 
 description: >
