--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,14 @@
 title: "Kartikey Saini | Data Analyst & BI Specialist"  # Website Title
 logo: "/images/Capture.PNG?raw=true"  # Path to Your Logo/Image
 
-description: >
+
   Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, Power BI, Excel, and Machine Learning to drive business insights and process efficiency. 
   Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance. 
-  Continuously exploring innovative data science applications to enhance business impact.  
-  
-  ### **Connect With Me**  
-  📌 [LinkedIn](https://www.linkedin.com/in/kartikey-saini-268827144)  
-  📌 [GitHub](https://github.com/kartikeysaini98)  
+  Continuously exploring innovative data science applications to enhance business impact.
 
-remote_theme: "pages-themes/minimal@v0.2.0"  # Using GitHub Minimal Theme
+links:
+  - name: LinkedIn
+    url: "https://www.linkedin.com/in/kartikey-saini-268827144"
+  - name: GitHub
+    url: "https://github.com/kartikeysaini98"
 
-plugins:
-  - jekyll-remote-theme  # Enables Remote Themes
-
-google_analytics: "UA-000000-0"  # Replace with Your Google Analytics ID (or remove if unused)
-
-show_downloads: true  # Show Download Button on Project Pages
