--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,17 @@ title: KARTIKEY SAINI # Your name or website title here
 logo: "/images/Capture.PNG?raw=true" # Your photo or logo here
 
 description:
-  Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, and BI tools to drive business insights and process efficiency. 
-  Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance. 
-  Continuously exploring innovative data science applications to enhance business impact.  
-  
-  [View My LinkedIn Profile](https://www.linkedin.com/in/kartikey-saini-268827144)  
+  <div style="text-align: center;">
+    Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, and BI tools to drive business insights and process efficiency.<br>
+    Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance.<br>
+    Continuously exploring innovative data science applications to enhance business impact.
+  </div>
+
+links:
+  - name: LinkedIn
+    url: "https://www.linkedin.com/in/kartikey-saini-268827144"
+  - name: GitHub
+    url: "https://github.com/kartikeysaini98"
 
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
