--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,11 @@ title: "KARTIKEY SAINI | ANALYST & RESEARCH SPECIALIST"  # Your name or website 
 logo: "/images/Capture.PNG?raw=true"  # Your photo or logo
 
 description: |
-  <div style="text-align: center;">
+  <div style="text-align: left;">
     Data-driven analyst with 4+ years of experience in data analysis and operational workflows, leveraging SQL, Python, and BI tools to drive business insights and process efficiency.<br>
     Passionate about transforming raw data into actionable intelligence, optimizing decision-making, and automating workflows for improved accuracy and performance.<br>
     Continuously exploring innovative data science applications to enhance business impact.
   </div>
-
-links:
-  - name: "LinkedIn"
-    url: "https://www.linkedin.com/in/kartikey-saini-268827144"
-  - name: "GitHub"
-    url: "https://github.com/kartikeysaini98"
 
 remote_theme: "pages-themes/minimal@v0.2.0"
 plugins:
